
April,  , 2023,AnnotSV version 3.3.4
	- Among the “po_P_*_*” features, redundancy is now removed ONLY from “po_P_*_phen” and “po_P_*_hpo”.
	=> AnnotSV keeps now the correspondence between “po_P_*_source”, “po_P_*_coord” and “po_P_*_percent” features.
	- Improvment of the running time (code part: SV partially overlapping with an established benign region)
	- Add a check of the "#CHROM" header line

March, 30, 2023,AnnotSV version 3.3.3
	- Add bugfix for large input file

March, 28, 2023,AnnotSV version 3.3.2
	- Add bugfix for SV partially overlapping with an established benign region. Ranking Impact
	- Improve the 40 criteria (Loss) in the SV ranking
	- Restrict the number of "po_B_*_someG_*" features to 20

March, 24, 2023, AnnotSV version 3.3.1
	- Add bugfix with the use of the SVminSize option
	- Report the minimal LOEUF value (among those of all overlapped genes) in the SV full length annotation
	- Update of the variantconvert distribution (1.2.2 installed)

March, 23, 2023, AnnotSV version 3.3
	- Add bugfix regarding genomic start coordinates. TSV and VCF output files are now both 1-based, with inclusive-end (whatever the input file format)
	- Add interpretation of the square-bracketed SV breakend notations within the VCF. 
	  This new module relies on the homogenization rules provided within the variant-extractor tool developed by Rodrigo Martín.
	- Update of the variantconvert distribution (1.2.1 installed)
	- Automation of the variantconvert module installaton
	- Reformat of the unannotated.tsv file
	- Add of the .gitignore file
	- VCF format handling update. According to the VCF 4.4 specification, the SVTYPE has now been deprecated (due to redundancy with ALT). 
	  The SV type is now extracted primarily from the ALT column, then from the SVTYPE field in the INFO column if available.
	- Add bugfix for the TAD annotations update process

January, 31, 2023, AnnotSV version 3.2.3